crates/oxc_react_compiler/tests/snapshots/optional-call-chain-in-logical-expr.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/optional-call-chain-in-logical-expr.ts
---
import { useNoAlias } from "shared-runtime";
function useFoo(props: {
	value: {
		x: string;
		y: string;
	} | null;
}) {
	const value = props.value;
	return useNoAlias(value?.x, value?.y) ?? {};
}
export const FIXTURE_ENTRYPONT = {
	fn: useFoo,
	props: [{ value: null }]
};
