crates/oxc_react_compiler/tests/snapshots/optional-call-simple.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/optional-call-simple.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props) {
		t0 = foo?.(props);
		$[0] = props;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
