crates/oxc_react_compiler/tests/snapshots/optional-call-with-independently-memoizable-arg.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/optional-call-with-independently-memoizable-arg.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props) {
		const x = makeOptionalFunction(props);
		t0 = x?.(<div><span>{props.text}</span></div>);
		$[0] = props;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const y = t0;
	return y;
}
