crates/oxc_react_compiler/tests/snapshots/optional-call-with-optional-property-load.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/optional-call-with-optional-property-load.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props?.items) {
		t0 = props?.items?.map?.(render)?.filter(Boolean) ?? [];
		$[0] = props?.items;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
